--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-changed": "^4.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-css-scss": "^0.1.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-minify-html": "^1.0.6",
     "gulp-rename": "^1.4.0",
